kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loganalyzer
  labels:
    name: loganalyzer
    app: loganalyzer
